...
        android:background="@color/banner"
        android:orientation="horizontal"
        android:padding="10dp">


        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Menu"
            android:src="@drawable/back"
            android:visibility="gone" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/bg_search_view"
            android:iconifiedByDefault="false"
            android:padding="5dp"
            android:queryHint="Search...">

        </SearchView>

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Menu"
            android:src="@drawable/baseline_density_medium_24"
            android:visibility="visible" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:visibility="visible">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@drawable/circle_border"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04000002" />


        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_text">

            <LinearLayout
                android:id="@+id/followers_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:outlineAmbientShadowColor="@color/background">

                <TextView
                    android:id="@+id/followers_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
...
                    android:text="@string/followers"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/following_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:clickable="true"
                android:divider="@android:color/darker_gray"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/following_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
...
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/followers_list"
            android:layout_width="0dp"
            android:layout_height="365dp"
            android:clickable="true"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            android:focusable="true"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/search_results_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context=".Pages.fragment_user_profile_page">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_results_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            android:focusable="true" />
...
