...
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="Profile Image"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />

        <ImageButton
            android:id="@+id/edit_profile_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@id/profile_image_view"
            android:layout_alignBottom="@id/profile_image_view"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="-9dp"
...
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/about_edit_text"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="top"
            android:hint="About"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:maxLines="10"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/whatevs"
            android:text="@string/save_button"
            android:textColor="@color/black" />
...
